fix: add repo link

--- a/static/index.html
+++ b/static/index.html
@@ -55,6 +55,7 @@
       </div>
       <div class="footer">
         <p>Powered by Discord & Cloudflare.<br />Made with love by Vincent.</p>
+        <a href="https://github.com/missuo/discord-image">https://github.com/missuo/discord-image</a>
       </div>
     </div>
 
